<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.accentrix.ci</groupId>
	<artifactId>bugcrum</artifactId>
	<version>1.2.3-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>${project.artifactId}</name>
	<description>A simple project with war packaging that depends on JSF 2.2 and 
        javaee 6, in that order.</description>
	<url>http://jsf-spec.java.net/</url>

	<properties>
		<jetty.maven.plugin.version>8.1.4.v20120524</jetty.maven.plugin.version>
		<spec.snapshot.version>2.1</spec.snapshot.version>
		<spring.version>4.0.7.RELEASE</spring.version>
		<slf4j.version>1.7.5</slf4j.version>
		<spring.data.jpa.version>1.7.0.RELEASE</spring.data.jpa.version>
		<querydsl.version>3.4.1</querydsl.version>
		<aspectj.version>1.7.2</aspectj.version>
		<java.version>1.6</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Mojarra JSF impl -->
		<!-- <dependency> -->
		<!-- <groupId>com.sun.faces</groupId> -->
		<!-- <artifactId>jsf-api</artifactId> -->
		<!-- <version>2.1.19</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>com.sun.faces</groupId> -->
		<!-- <artifactId>jsf-impl</artifactId> -->
		<!-- <version>2.1.19</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.glassfish</groupId> -->
		<!-- <artifactId>javax.faces</artifactId> -->
		<!-- <version>2.1.19</version> -->
		<!-- </dependency> -->

		<!-- myfaces JSF impl -->
		<dependency>
			<groupId>org.apache.myfaces.core</groupId>
			<artifactId>myfaces-api</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.myfaces.core</groupId>
			<artifactId>myfaces-impl</artifactId>
			<version>2.2.0</version>
		</dependency>

		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>el-api</artifactId>
			<version>2.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>el-impl</artifactId>
			<version>2.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>com.accentrix.nttca.dcms</groupId>
			<artifactId>dcms-common</artifactId>
			<version>0.1.12-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>5.1</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>cupertino</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.extensions</groupId>
			<artifactId>primefaces-extensions</artifactId>
			<version>2.0.0</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- Spring dependencies -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.31</version>
		</dependency>

		<!-- JPA -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>4.3.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>4.3.5.Final</version>
			<exclusions>
				<exclusion>
					<groupId>cglib</groupId>
					<artifactId>cglib</artifactId>
				</exclusion>
				<exclusion>
					<groupId>dom4j</groupId>
					<artifactId>dom4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
			<version>1.0.0.Final</version>
		</dependency>
		<dependency>
			<groupId>c3p0</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring.data.jpa.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-core</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-apt</artifactId>
			<version>${querydsl.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-jpa</artifactId>
			<version>${querydsl.version}</version>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
		
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.1.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.23.Final</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.4.0</version>
		</dependency>
		
		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>oscache</artifactId>
			<version>2.4.1</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.0</version>
				<configuration>
					<systemProperties>
						<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=1024m</JAVA_OPTS>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mysema.maven</groupId>
				<artifactId>apt-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<goals>
							<goal>process</goal>
						</goals>
						<configuration>
							<outputDirectory>src/generated/java/query</outputDirectory>
							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>aspectj-maven-plugin</artifactId>
				<version>1.4</version>
				<!-- NB: do not use 1.3 or 1.3.x due to MASPECTJ-90 issue -->
				<dependencies>
					<!-- NB: You must use Maven 2.0.9 or above or these are ignored (see 
						MNG-2972) -->
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjrt</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjtools</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>compile</goal>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outxml>true</outxml>
					<aspectLibraries>
						<aspectLibrary>
							<groupId>org.springframework</groupId>
							<artifactId>spring-aspects</artifactId>
						</aspectLibrary>
						<aspectLibrary>
							<groupId>com.accentrix.nttca.dcms</groupId>
							<artifactId>dcms-common</artifactId>
						</aspectLibrary>
					</aspectLibraries>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<!-- Aspects in src/main/java and src/main/aspects are added as default 
						in the compile goal. Aspects in src/test/java and src/test/aspects are added 
						as default in the test-compile goal. Aspects in src/main/java are added in 
						the test-compile goal if weaveWithAspectsInMainSourceFolder is set to true -->
					<weaveWithAspectsInMainSourceFolder>false</weaveWithAspectsInMainSourceFolder>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<!-- Plugin embedded jetty 7 container. Just running use: mvn clean jetty:run 
				or mvn clean -Djsf=myfaces -Dcontainer=jetty jetty:run -->
			<!-- For debugging use (attach debugger port 8000): mvnDebug clean jetty:run 
				or mvn clean -Djsf=myfaces -Dcontainer=jetty jetty:run -->
			<id>jettyConfig</id>
			<activation>
				<property>
					<name>container</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<!--This plugin allows to run the war using mvn jetty:run -->
						<groupId>org.mortbay.jetty</groupId>
						<artifactId>jetty-maven-plugin</artifactId>
						<version>${jetty.maven.plugin.version}</version>
						<configuration>
							<contextXml>src/main/resources/jetty-contexts.xml</contextXml>
							<webApp>
								<contextPath>/bugcrum</contextPath>
							</webApp>
							<!-- <reload>automatic</reload> <scanIntervalSeconds>10</scanIntervalSeconds> -->
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	
	<scm>
		<developerConnection>scm:svn:http://192.168.118.219/svn/bugcrum/trunk/bugcrum</developerConnection>
	</scm>
	
	<distributionManagement>
		<repository>
			<id>nexus</id>
			<url>http://192.168.118.219/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>nexus</id>
			<url>http://192.168.118.219/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	
	<repositories>
		<repository>
			<id>java.net-maven2-SNAPSHOT-repository</id>
			<name>Java.net SNAPSHOT-Repository for Maven</name>
			<url>https://maven.java.net/content/repositories/snapshots/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>java.net-maven2-repository</id>
			<name>Java.net Repository for Maven</name>
			<url>https://maven.java.net/content/repositories/releases/</url>
			<layout>default</layout>
		</repository>
	</repositories>
</project>
